fix window's at authorization cropped

--- a/authorization/static/css/window.css
+++ b/authorization/static/css/window.css
@@ -34,7 +34,9 @@
 
 .field{
     display: block;
-    width: 100%
+    width: 100%;
+
+    margin-top: 0.5px;
 }
 
 .btn{
